depreciated sequelize version for sequelize.import to function, updated config.json to connect to mysql port, developed associate many-to-many relationship between models

--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,10 @@
 {
   "development": {
     "username": "root",
-    "password": "empty",
+    "password": null,
     "database": "neighborhood_db",
     "host": "127.0.0.1",
+    "port": 3306,
     "dialect": "mysql"
   },
   "test": {
@@ -11,6 +12,7 @@
     "password": null,
     "database": "neighborhood_db",
     "host": "127.0.0.1",
+    "port": 3306,
     "dialect": "mysql"
   },
   "production": {
